--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 }
 
 .bar {
-    background-color: red;
+    // background-color: red;
 }
 
 .homeLink {
