--- a/src/components/Header/Menu.module.scss
+++ b/src/components/Header/Menu.module.scss
@@ -4,7 +4,8 @@
 }
 
 .active_link {
-  color: rgb(117, 116, 116);
+  // color: rgb(117, 116, 116);
+  color: black;
   // color: red;
 }
 
